log

Thu 17 Aug 2023 08:14:30 PM UTC: 
 exercises.c | 60 ++++++++++++++++++++++++++++++++++++++++++++++++++++--------
 1 file changed, 52 insertions(+), 8 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:52:10: error: function returns address of local variable [-Werror=return-local-addr]
   52 |   return arrLocal;
      |          ^~~~~~~~
exercises.c: In function ‘checkSorted’:
exercises.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e9b1f3c
Thu 17 Aug 2023 08:15:41 PM UTC: 
 exercises.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:52:10: error: function returns address of local variable [-Werror=return-local-addr]
   52 |   return arrLocal;
      |          ^~~~~~~~
test.c: In function ‘test_mergeSort’:
test.c:204:3: error: implicit declaration of function ‘mergeSortedArrays’ [-Werror=implicit-function-declaration]
  204 |   mergeSortedArrays(arr1, size1, arr2, size2, result);
      |   ^~~~~~~~~~~~~~~~~
test.c: In function ‘test_checkSorted’:
test.c:258:18: error: implicit declaration of function ‘checkSorted’; did you mean ‘test_checkSorted’? [-Werror=implicit-function-declaration]
  258 |     int result = checkSorted(arr, size);
      |                  ^~~~~~~~~~~
      |                  test_checkSorted
test.c: In function ‘test_biblioteca’:
test.c:306:5: error: implicit declaration of function ‘inicializarLibro’ [-Werror=implicit-function-declaration]
  306 |     inicializarLibro(&libro, titulos[i], autores[i], aniosNacimiento[i],
      |     ^~~~~~~~~~~~~~~~
test.c: In function ‘test_crearListaEnlazada’:
test.c:331:19: error: implicit declaration of function ‘crearListaEnlazada’; did you mean ‘test_crearListaEnlazada’? [-Werror=implicit-function-declaration]
  331 |     Nodo* lista = crearListaEnlazada(arr, size);
      |                   ^~~~~~~~~~~~~~~~~~
      |                   test_crearListaEnlazada
test.c:331:19: error: initialization of ‘Nodo *’ {aka ‘struct nodo *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
60934c9
Thu 17 Aug 2023 08:16:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:52:19: error: expected expression before ‘]’ token
   52 |   return arrLocal[];
      |                   ^
exercises.c:44:7: error: variable ‘arrLocal’ set but not used [-Werror=unused-but-set-variable]
   44 |   int arrLocal[size];
      |       ^~~~~~~~
test.c: In function ‘test_mergeSort’:
test.c:204:3: error: implicit declaration of function ‘mergeSortedArrays’ [-Werror=implicit-function-declaration]
  204 |   mergeSortedArrays(arr1, size1, arr2, size2, result);
      |   ^~~~~~~~~~~~~~~~~
test.c: In function ‘test_checkSorted’:
test.c:258:18: error: implicit declaration of function ‘checkSorted’; did you mean ‘test_checkSorted’? [-Werror=implicit-function-declaration]
  258 |     int result = checkSorted(arr, size);
      |                  ^~~~~~~~~~~
      |                  test_checkSorted
test.c: In function ‘test_biblioteca’:
test.c:306:5: error: implicit declaration of function ‘inicializarLibro’ [-Werror=implicit-function-declaration]
  306 |     inicializarLibro(&libro, titulos[i], autores[i], aniosNacimiento[i],
      |     ^~~~~~~~~~~~~~~~
test.c: In function ‘test_crearListaEnlazada’:
test.c:331:19: error: implicit declaration of function ‘crearListaEnlazada’; did you mean ‘test_crearListaEnlazada’? [-Werror=implicit-function-declaration]
  331 |     Nodo* lista = crearListaEnlazada(arr, size);
      |                   ^~~~~~~~~~~~~~~~~~
      |                   test_crearListaEnlazada
test.c:331:19: error: initialization of ‘Nodo *’ {aka ‘struct nodo *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
222594c
Thu 17 Aug 2023 08:17:01 PM UTC: 
 exercises.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:52:19: error: expected expression before ‘]’ token
   52 |   return arrLocal[];
      |                   ^
exercises.c:44:7: error: variable ‘arrLocal’ set but not used [-Werror=unused-but-set-variable]
   44 |   int arrLocal[size];
      |       ^~~~~~~~
exercises.c: At top level:
exercises.c:70:3: error: expected ‘;’ before ‘int’
   70 | }¨
      |   ^
      |   ;
......
   78 | int checkSorted(int arr[], int size)
      | ~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:53:1: error: control reaches end of non-void function [-Werror=return-type]
   53 | }
      | ^
exercises.c: In function ‘checkSorted’:
exercises.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
efdf26f
Thu 17 Aug 2023 08:17:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:52:10: error: function returns address of local variable [-Werror=return-local-addr]
   52 |   return arrLocal;
      |          ^~~~~~~~
exercises.c: At top level:
exercises.c:70:3: error: expected ‘;’ before ‘int’
   70 | }¨
      |   ^
      |   ;
......
   78 | int checkSorted(int arr[], int size)
      | ~~~
exercises.c: In function ‘checkSorted’:
exercises.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6947fb8
Thu 17 Aug 2023 08:25:36 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:45:29: error: passing argument 1 of ‘malloc’ makes integer from pointer without a cast [-Werror=int-conversion]
   45 |   arrLocal = (int *) malloc(arrLocal, sizeof(int) * size);
      |                             ^~~~~~~~
      |                             |
      |                             int *
In file included from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:540:29: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘int *’
  540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |                      ~~~~~~~^~~~~~
In file included from test.c:1:
exercises.c:45:22: error: too many arguments to function ‘malloc’
   45 |   arrLocal = (int *) malloc(arrLocal, sizeof(int) * size);
      |                      ^~~~~~
In file included from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:540:14: note: declared here
  540 | extern void *malloc (size_t __size) __THROW __attribute_malloc__
      |              ^~~~~~
In file included from test.c:1:
exercises.c: At top level:
exercises.c:73:3: error: expected ‘;’ before ‘int’
   73 | }¨
      |   ^
      |   ;
......
   81 | int checkSorted(int arr[], int size)
      | ~~~
exercises.c: In function ‘checkSorted’:
exercises.c:89:1: error: control reaches end of non-void function [-Werror=return-type]
   89 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
98d4040
Thu 17 Aug 2023 08:25:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:73:3: error: expected ‘;’ before ‘int’
   73 | }¨
      |   ^
      |   ;
......
   81 | int checkSorted(int arr[], int size)
      | ~~~
exercises.c: In function ‘checkSorted’:
exercises.c:89:1: error: control reaches end of non-void function [-Werror=return-type]
   89 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6df0059
Thu 17 Aug 2023 08:25:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:89:1: error: control reaches end of non-void function [-Werror=return-type]
   89 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
64b22ee
Thu 17 Aug 2023 08:26:41 PM UTC: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:84:7: error: unused variable ‘i’ [-Werror=unused-variable]
   84 |   int i = 1;
      |       ^
exercises.c:83:7: error: unused variable ‘pivIzq’ [-Werror=unused-variable]
   83 |   int pivIzq = arr[0];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
67e721e
Thu 17 Aug 2023 08:27:03 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
98ae365
Thu 17 Aug 2023 08:29:55 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
Thu 17 Aug 2023 08:30:01 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
Thu 17 Aug 2023 08:32:35 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:51:17: error: ‘talla’ undeclared (first use in this function)
   51 |       arrLocal[(talla)] = arr[i];
      |                 ^~~~~
exercises.c:51:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5840843
